wwr/styles/rafting.css
:root {
    --primary-color: #C6C5B9; 
    --secondary-color: #475657 ;
    --accent1-color: #62929E ;
    --accent2-color: #4A6D7C;
}

* {
    box-sizing: border-box;
}

header {
    display: grid;
    grid-template-columns: 25% 25% 25% 25%; 
    align-items: center;

    border-bottom: 7px solid var(--secondary-color);
    margin-bottom: 15%;
    padding-bottom: 2.5%;
    background-color: var(--primary-color);
}

header img {
    display:flex;
    grid-column: 2/3;
}

header nav {
    display:flex;
    grid-column: 3/4;
    justify-content: space-evenly;

    background-color: white;
    padding: 5%;  
    border-bottom: 7px solid black 
}

body {
    font-family: "Edu AU VIC WA NT Hand", serif;
    font-weight: 400; 
}

h1, h2 {
    font-family: "Baskervville SC", serif;
    font-weight: 400;
}

.hero {
    position:relative;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 15%;
}

.hero img {
    width: 80%;
	height: auto;  
}

.hero article {
    position: absolute;
    width:60%;
    height:auto;
    bottom: 30%;

    background-color: rgba(24, 77, 99, 0.6);
	padding: 2.5%;
    color: white;
}

.hero article img {
    width: 10rem;
    height: auto;
    float:right;
}

.hero h1 {
    position: absolute;
    font-weight: 100;
    
    box-sizing: border-box;
    top: 20%;
    text-align:center;
    width:80%;

    background-color: rgba(0, 0, 0, 0.5);
    color: white;
	padding: 2.5%;
}

h2 {
    color: var(--accent2-color);
}

.history {
    margin-bottom: 15%;
    display:grid;
    grid-template: 50% 50% / 20% 20% 20% 20% 20%;
    align-items: center;
    
    padding-bottom: 10%;
    border: 5px solid var(--secondary-color); 
    background-color: var(--primary-color);
}

.history h2 {
    grid-column: 3/3;
    text-align: center;
}

.history img {
    width:100%;
    height: auto;
    grid-area: 2/3/2/3;
    justify-self: center; 
}

.history p {
    grid-column: 2/2;
    text-align:center;
    margin-right: 10%;
}

.history .p2 {
   grid-column: 4/4;
   text-align:center;
   margin-left: 10%;
}

.adventure {
    background-color: var(--primary-color);
    display:grid;
    padding-bottom: 5%;
    border: 5px solid var(--secondary-color);
}

.adventure h2 {
    font-size: 300%;
    grid-column: 1 / span 5;
    text-align: center;
}

.adventure figure {
    border: 5px solid #475657;
    display: flex;
    flex-flow: column;
    padding: 5px;
    margin: auto;
}
  
.adventure img {
    max-width: 100%;
    max-height: 150px;
}
  
.adventure figcaption {
    background-color: var(--secondary-color);
    color: var(--accent1-color); 
    padding: 3px;
    text-align: center;
}

footer {
    background-color: var(--accent2-color);
    display:flex;
    align-items: center;
    justify-content: space-between;
    padding: 5%;
    border-bottom: 10px solid var(--secondary-color);
    margin-top:15%;
    color: white;
}


.medialinks {
    display:flex;
}

.medialinks img {
    width:10%;
    height:auto;
}

.medialinks a {
    text-decoration:none;
    color:white;
}



/* Contact html specific */

.contact {
    display:flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--primary-color);
    border: 5px dashed var(--secondary-color);
    color: var(--accent2-color);
    margin-bottom: 15%;
}

.contact h1 {
    font-weight:bold;
}

.map {
    display:flex;
    width:100%;
    height: auto;
    align-items: center;
    justify-content: center;
    padding: 2.5%;
}

.encouragement {
    display:flex;
    background-color: var(--primary-color);
    border: 5px dashed var(--secondary-color);
    margin-bottom: 15%;
    padding-top:10%;
    padding-bottom:10%;
}

.encouragement figure {
    width: 100%; 
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    text-align: center;
}

.encouragement figcaption {
    text-align: center;
    background-color: var(--secondary-color);
    color: white;
    border: 3px solid black;
    width:75%;
    height:auto;
}

.encouragement img {
    max-width:75%;
    height:auto;
    object-fit: cover
}

.forms {
    display:flex;
    justify-content: space-around;
    background-color: var(--primary-color);
    padding: 5%;
    border: 5px dashed var(--secondary-color);
}

.forms div {
    margin-bottom: 2rem;
}

label {
    font-weight:bold;
}

#comment {
    display:flex;
    width: 30rem; 
    height: 15rem; 
    font-size: 16px; 
    padding: 5%; 
}

#subscribe {
    color:blue;
}

.special {
    color: blue;
}

button {
    border: 2px solid black;
    width:10rem;
    height:2rem;
}

/* Home html specific */

.go-rafting {
    position:relative;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 15%;
}

.go-rafting h1 {
    position:absolute;
    font-weight: 100;
    font-size: 500%;
    
    top:30%;
    text-align:center;
    width:80%;


    background-color: rgba(0, 0, 0, 0.5);
    color: white;
	padding: 2.5%;
}

.go-rafting img{
    width:100%;
    height:auto;
}

.newsletter-form {
    display:flex;
    justify-content:space-around;
    align-items:center;
    background-color: var(--primary-color);
    padding:5%;
    border: 5px solid var(--secondary-color);
    margin-bottom:15%;
}

.newsletter-form form {
    display:flex;
    flex-direction: column;
    align-items: center;
}

.newsletter-form h2 {
    font-weight:bold;
}

.go-trip {
    position:relative;
    display:flex;
    flex-direction: column;
    justify-content:center;
    align-items:center;
    background-color: var(--accent1-color);
    border: 5px dashed var(--secondary-color);
    margin-bottom:15%;
}

.go-trip h2 {
    background-color: rgba(74, 109, 124, 0.5);
    padding:2.5%;
    font-size: 200%;
    color: var(--primary-color);
}

.go-trip img {
    width:80%;
    height:auto;
    border: 5px solid grey;
}

.go-trip nav {
    font-size: 200%;
    padding:2%;
}

.purpose {
    display:grid;
    grid-template: 1fr / 1fr 1fr;
    gap:20px;
    background-color: var(--primary-color);
    padding:5%;
    border: 5px solid var(--secondary-color)
}

.purpose article {
    display:flex;
    align-items: center;
    flex-direction: column;  
    padding: 10px;
    background-color: white;
    border: 5px solid var(--secondary-color)
}

.purpose article h2 {
    text-align: center;
    padding: 2%;
    background-color: rgba(129, 166, 223, 0.3);
    border: 5px solid var(--accent1-color)
}

.purpose p {
    background-color: rgba(129, 166, 223, 0.4);
    border: 5px solid var(--accent1-color);
    padding: 5%;
    flex-grow:1;
    flex-shrink:0
}

.purpose article img {
    width:100%;
    height:auto;
    border: 5px solid var(--accent2-color);
}

/* trip html specific */

.contact-link {
    display:flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    text-align:center;
    background-color: var(--primary-color);
    border: 5px solid var(--secondary-color);
    margin-bottom:15%;
}

.contact-link h1 {
    font-weight: bold;
    font-size: 300%;
    width: 100%;
    padding:10%;
    background-color: rgba(183, 213, 226, 0.6);
    border: 2px dashed var(--secondary-color);
    width:80%;
}

.contact-link-div {
    display:grid;
    grid-template: 1fr / 1fr 1fr;
    justify-content: space-around;
    padding:2.5%;
    background-color: var(--accent2-color);
    gap:20px;
    flex-grow:1;
    border: 2px solid var(--secondary-color);
}

.contact-link-div div {
    background-color: white;
    flex-grow:1;
    align-content: center;
    border: 2px dashed var(--secondary-color);
}

.trips {
    display:flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap:10%;
    width:100%;
    height:auto;
    padding: 5%;
    margin-bottom: 15%;
    background-color: var(--primary-color);
    border: 5px solid var(--secondary-color)
}

.trips img {
    width:25%;
    height:90%;
    border: 5px solid var(--accent2-color)
}

.trips-heading {
    display:flex;
    flex-direction:row;
    align-items: center;
    justify-content: space-between;
    flex-grow:1
}

.trips h2 {
    background-color: white;
    padding:2%;
    border-bottom: 5px solid var(--accent2-color)
}

.trips-table {
    display:flex;
    flex-direction:column;
    justify-content: center;
    align-items: center;
    background-color: var(--primary-color);
    padding: 2.5%;
    border: 5px solid var(--secondary-color);
}

.trips-table h2 {
    padding:2.5%;
    background-color: rgb(228 240 245);
    border-bottom: 5px solid var(--secondary-color)
}

table {
    border-collapse: collapse;
    border: 2px solid var(--secondary-color);
    font-size: 1rem;
    letter-spacing: 1px;
  }
  
caption {
    caption-side: top;
    background-color: rgb(228 240 245);
    border: 2px solid var(--secondary-color);
    padding: 10px;
    font-weight: 700;
    font-style: italic;
  }
  
tfoot {
    background-color: rgb(228 240 245);
  }
  
thead th {
  background-color: #000;
  color: #fff;
}
  

th, td {
    border: 1px solid rgb(160 160 160);
    padding: 8px 10px;
  }
  
td:last-of-type {
    text-align: center;
  }
tbody {
    background-color: var(--accent2-color);
    color:white;
  }
  
tfoot th {
    text-align: center;
  }
  
tfoot td {
    font-weight: bold;
  }
  

